Fixed some spacing issues in the nav bar and replaced burger icon. Header about complete

--- a/main.css
+++ b/main.css
@@ -1,7 +1,13 @@
 
+.header{
+	width:100%;
+	padding-top:100px;
+	padding-left:95px;
+}
+
 .columnholder{
 	padding-top:80px;
-	padding-left:70px;
+	padding-left:95px;
 	width:100%;
 	display:inline-block ;
 
@@ -56,17 +62,28 @@ body {
 .medialinks{
 	display:flex;
 	justify-content:center;
+	align-items:center;
 	float:right;
+	width:120px;
 
 }
 .medialinks a{
 	display:inline-block;
+	margin-right:10px;
 }
 .medialinks a img{
-	width:24px;
-	height:24px;
+	width:20px;
+	height:20px;
 }
-
+.medialinks div
+{
+	padding-left:10px;
+	border-left:1px solid #D3D3D3;
+	height:45px;
+	display:flex;
+	align-items:center;
+	justify-content:center;
+}
 img{
 	display:block;
 	margin-left:auto;
